# wechat-to-a2a

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  publish.yml  validate.yml
scripts/: README.md  check_coverage.py  dependency_health.sh  doctor.sh  health_common.sh  lint.sh  smoke_test_built_cli.sh
src/wechat_a2a_gateway/: __init__.py  a2a_client.py  app.py  cli.py  conversation.py  ilink.py  settings.py  wechat.py
src/wechat_to_a2a/: a2a_client.py  a2a_transport.py  app.py  cli.py  conversation.py  formatting.py  gateway.py  ilink.py  settings.py  wechat.py
tests/: test_a2a_client.py  test_app.py  test_cli.py  test_conversation.py  test_formatting.py  test_gateway.py  test_ilink.py  test_settings.py  test_wechat.py
